--- a/_config.yml
+++ b/_config.yml
@@ -18,22 +18,23 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Irregularily Updated Content
+email: nowhere@vpol.dev
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://blog.vpol.dev" # the base hostname & protocol for your site, e.g. http://example.com
+# twitter_username: jekyllrb
+github_username:  vpol
 
 # Build settings
 theme: null
 plugins:
   - jekyll-feed
 
+include: [_pages]
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -53,3 +54,20 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+defaults:
+    - 
+        scope: 
+            type: posts
+            path: _posts
+        values:
+            is_post: true
+            layout: post
+            permalink: /posts/:categories/:title/
+    -
+        scope:
+            type: pages
+            path: _pages
+        values:
+            is_post: false
+            layout: default
